--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
+<!DOCTYPE html>
 <html>
-<body>
-hello world
-</body>
+    <head>
+        <title>loadMapAsyncHTML</title>
+        <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
+    </head>
+    <body>
+        <div id='printoutPanel'></div>
+        <script type='text/javascript' src="myMap.js"></script>
+        <script type='text/javascript' src='https://cn.bing.com/mapspreview/sdk/mapcontrol?branch=release&callback=loadMapScenario' async defer></script>
+    </body>
 </html>
