--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>loadMapAsyncHTML</title>
-        <meta http-equiv='Content-Type' content='text/html; charset=utf-8'/>
-    </head>
-    <body>
-        <div id='printoutPanel'></div>
-        <script type="text/javascript" src="lib/axios/dist/axios.standalone.js"></script>
-        <script type="text/javascript" src="lib/CryptoJS/rollups/hmac-sha256.js"></script>
-        <script type="text/javascript" src="lib/CryptoJS/rollups/sha256.js"></script>
-        <script type="text/javascript" src="lib/CryptoJS/components/hmac.js"></script>
-        <script type="text/javascript" src="lib/CryptoJS/components/enc-base64.js"></script>
-        <script type="text/javascript" src="lib/url-template/url-template.js"></script>
-        <script type="text/javascript" src="lib/apiGatewayCore/sigV4Client.js"></script>
-        <script type="text/javascript" src="lib/apiGatewayCore/apiGatewayClient.js"></script>
-        <script type="text/javascript" src="lib/apiGatewayCore/simpleHttpClient.js"></script>
-        <script type="text/javascript" src="lib/apiGatewayCore/utils.js"></script>
-        <script type="text/javascript" src="apigClient.js"></script>
-        <script type='text/javascript' src="myMap.js"></script>
-        <script type='text/javascript' src='https://cn.bing.com/mapspreview/sdk/mapcontrol?branch=release&callback=loadMapScenario' async defer></script>
-    </body>
+
+<head>
+    <title>loadMapAsyncHTML</title>
+    <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
+</head>
+
+<body>
+    <div id='printoutPanel'></div>
+
+    <div id='myMap' style='width: 100vw; height: 100vh;'></div>
+    <script type='text/javascript'>
+        var map;
+                function loadMapScenario() {
+                    map = new Microsoft.Maps.Map(document.getElementById('myMap'), {
+                        credentials: 'AmGfXoPF5L4OcyP3y1T7R9POld5vCh6OkxuB9eRsNaqVvd6J6Z3hHZUWyh79THjC'
+                    });
+                }
+    </script>
+    <script type='text/javascript' src='http://cn.bing.com/api/maps/sdkrelease/mapcontrol?branch=experimental&callback=loadMapScenario'
+    async defer></script>
+</body>
+
 </html>
