--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     });
                 }
     </script>
-    <script type='text/javascript' src='http://cn.bing.com/api/maps/sdkrelease/mapcontrol?branch=experimental&callback=loadMapScenario'
+    <script type='text/javascript' src='https://cn.bing.com/api/maps/sdkrelease/mapcontrol?branch=experimental&callback=loadMapScenario'
     async defer></script>
 </body>
 
