--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
                 
             
         </script>
-        <script type='text/javascript' src='https://cn.bing.com/api/maps/sdkrelease/mapcontrol?branch=experimental&callback=loadMapScenario' async defer></script>
+        <script type='text/javascript' src='https://cn.bing.com/mapspreview/sdk/mapcontrol?branch=release&callback=loadMapScenario' async defer></script>
     </body>
 </html>
